# memory-doctrine

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  knowledge.json
axioms/: A2-atomicity.md  (+22 more)
tools/kpm-builder/: README.md  SKILL.md  pyproject.toml  requirements.txt
tools/kpm-builder/examples/raft-thesis-kpm/: ABOUT.md  LICENSE-NOTICE.md  README.md  knowledge.json
tools/kpm-builder/examples/raft-thesis-kpm/axioms/: a-candidate-wins-an-election-if-it-receives.md  a-leader-knows-that-an-entry-from-its.md  a-leader-never-overwrites-or-deletes-entries-in.md  a-leader-sends-a-follower-a-snapshot-only.md  a-leader-that-is-removed-from-the-new.md  a-log-entry-for-a-configuration-change-can.md  (+144 more)
tools/kpm-builder/kpm_builder/: __main__.py  _util.py  apply_relations.py  cli.py  concepts.py  confidence.py  gate.py  graph_index.py  ground.py  label.py  orchestrate.py  providers.py  refute.py  relate.py  resolve.py  run_mvp.py  schema.py  snapshot.py  strip.py
tools/kpm-builder/tests/: test_apply_relations.py  test_cli.py  test_concepts.py  test_confidence.py  test_gate.py  test_graph_index.py  test_ground_engine.py  test_label.py  test_mvp_integration.py  test_orchestrate.py  test_providers.py  test_refute.py  test_relate.py  test_resolve.py  test_schema.py  test_snapshot.py  test_strip.py
tools/package-research/: ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
tools/package-research/src/package_research/: assemble.py  clamps.py  cli.py  cluster.py  config.py  distill.py  ingest.py  llm.py  llm_core.py  relate.py  score.py  split.py  validate.py  verify.py
tools/package-research/tests/: test_assemble.py  test_clamps.py  test_cli.py  test_cluster.py  test_config.py  test_distill.py  test_ingest.py  test_llm.py  test_relate_stage.py  test_skill_mode.py  test_split.py  test_validate.py  test_wiring.py
(+77 files in other folders)
