[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "package-research"
version = "0.1.0"
description = "Turn a folder of raw notes into a doctrine-grounded knowledge package (KPM). The Memory Doctrine's consuming tool."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "anthropic>=0.40",
]

[project.scripts]
package-research = "package_research.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
package_research = ["prompts/*.md", "vendor/doctrine_lint.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
